Game object world positions are now based on screen resolution